--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "joiful": "^3.0.2",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.5",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8"
