--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "joiful": "^3.0.2",
