--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-upload": "^12.0.0",
     "joiful": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/graphql-upload": "^8.0.7",
     "@types/jsonwebtoken": "^8.5.5",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8"
