--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "apollo-server-express": "^3.2.0",
+    "apollo-server-express": "^3.3.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
@@ -12,11 +12,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-redis-subscriptions": "^2.4.0",
+    "graphql-subscriptions": "^1.2.1",
     "joiful": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
+    "subscriptions-transport-ws": "^0.9.19",
+    "type-graphql": "1.0.0",
     "typeorm": "^0.2.37",
     "typescript": "^4.3.5"
   },
